# m5core2-time-box

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  my_partition_table.csv  sdkconfig
components/i2c_manager/i2c_manager/: i2c_manager.c
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c
main/: CMakeLists.txt  lvgl_manager.cpp  lvgl_manager.hpp  main.cpp  power_manager.cpp  power_manager.hpp  thread_manager.hpp  utils.cpp  utils.hpp  wifi_manager.cpp  wifi_manager.hpp
main/gui/: battery_status.cpp  battery_status.hpp  countdown_timer.cpp  countdown_timer.hpp  lvgl_manager.cpp  lvgl_manager.hpp  my_symbols.hpp  nav_page.cpp  nav_page.hpp  status_bar.cpp  status_bar.hpp  utils.cpp  utils.hpp  wifi_page.cpp  wifi_page.hpp
main/gui/status/: battery_status.cpp  battery_status.hpp  display_bar.cpp  display_bar.hpp
